--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,23 @@ body {
     font-family: var(--mainFont);
 }
 
+/* ! Colors - Categories */
+.concert {
+    color: #da595e;
+}
+
+.class {
+    color: #598dda;
+}
+
+.outdoor-activity {
+    color: #940ad4;
+}
+
+.lodgment {
+    color: #274154;
+}
+
 h1 {
     font-weight: 700;
     font-size: 2rem;
@@ -187,4 +204,61 @@ img {
     padding: 1rem 2rem;
     border-radius: 5px;
     border: none;
+    cursor: pointer;
+}
+
+main>section {
+    margin-bottom: 2rem;
+}
+
+.cards-container {
+    display: grid;
+    grid-gap: 1rem;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+}
+
+.card img {
+    width: 100%;
+}
+
+.card .categories {
+    text-transform: uppercase;
+    font-size: .9rem;
+    font-weight: 700;
+}
+
+.card .title {
+    font-size: 1.6rem;
+    font-weight: 900;
+    margin: 0;
+}
+
+.card .price {
+    font-size: .9rem;
+}
+
+.countries .cards-container {
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+}
+
+.countries .card {
+    position: relative;
+}
+
+.countries .info {
+    position: absolute;
+    width: 100%;
+    bottom: 1rem;
+    left: 0;
+    color: var(--light);
+    text-align: center;
+}
+
+.countries .title {
+    font-size: 1.4rem;
+    margin: 0;
+} 
+
+.countries .price {
+    font-size: .8rem;
 }
