--- a/css/styles.css
+++ b/css/styles.css
@@ -32,7 +32,7 @@ body {
     color: #940ad4;
 }
 
-.lodgment {
+.lodgement {
     color: #274154;
 }
 
@@ -221,7 +221,7 @@ main>section {
     width: 100%;
 }
 
-.card .categories {
+.card .category {
     text-transform: uppercase;
     font-size: .9rem;
     font-weight: 700;
